Convert koans into unit tests.